--- a/day8/day8.cabal
+++ b/day8/day8.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: d0d048805ce279b5d6224477b93e0a6d5f10b4d48f01f1d9de8bbd526d6db8f4
+-- hash: f3ce69fe4233714b83154d168d69de1e06b0577d925b163432e49f370726374d
 
 name:           day8
 version:        0.1.0.0
@@ -30,5 +30,6 @@ executable day8-exe
   build-depends:
       base >=4.7 && <5
     , containers
+    , ghc
     , parsec
   default-language: Haskell2010
