--- a/day22/day22.cabal
+++ b/day22/day22.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: ca5d0fe3e9c0e1cf9cad75d950d4b8cdcdc5c427b3f6fe050270f00756286b17
+-- hash: d4a62a4cba694c23bffbd64df679757be6b1d0a06eed1418748af5bea4e9a272
 
 name:           day22
 version:        0.1.0.0
@@ -29,5 +29,6 @@ executable day22-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , containers
     , parsec
   default-language: Haskell2010
