--- a/day23/day23.cabal
+++ b/day23/day23.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: ebe2f3977adad6efbf894075d317e429676b4a444b3728263c091ab07dde2ca9
+-- hash: c44bd63fdbb82eb221f022976ca67bf7fb66a5236ee419202f395bea66991b99
 
 name:           day23
 version:        0.1.0.0
@@ -28,6 +28,8 @@ executable day23-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      array
+    , base >=4.7 && <5
     , ghc
+    , time
   default-language: Haskell2010
